# ComfyUI-FFmpeg

./: .gitignore  README.md  README_EN.md  __init__.py  func.py  nodes_map.py  pyproject.toml
nodes/: addAudio.py  addImgWatermark.py  addTextWatermark.py  extractAudio.py  frames2video.py  imageCopy.py  imagePath2Tensor.py  imagesSave.py  loadImageFromDir.py  mergingVideo.py  mergingVideoByPlenty.py  mergingVideoByTwo.py  multiCuttingVideo.py  singleCuttingVideo.py  stitchingVideo.py  video2frames.py  videoFlip.py
